Refactor components with css modules

--- a/src/components/new-todo.module.css
+++ b/src/components/new-todo.module.css
@@ -1,17 +1,17 @@
-#new-todo {
+.newTodo {
   display: flex;
   flex-direction: row;
   border: 1px solid grey;
 }
 
-#new-todo__text-field {
+.textField {
   width: 100%;
   border-radius: 0px;
   border: none;
   padding: 0.25rem;
 }
 
-#new-todo__button {
+.button {
   border: none;
   border-left: 1px solid grey;
   padding: 0.25rem;
