--- a/src/components/todo-list.module.css
+++ b/src/components/todo-list.module.css
@@ -1,14 +1,14 @@
-#todo-list {
+.todoList {
   margin: 0.75rem;
   border-radius: 12px;
 }
 
-#todo-list .todo:first-child {
+.todo:first-child {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
 
-#todo-list .todo:last-child {
+.todo:last-child {
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
 }
