--- a/src/components/todo.module.css
+++ b/src/components/todo.module.css
@@ -14,15 +14,15 @@
   margin: 0 0.5rem;
 }
 
-.todo__text {
+.text {
   width: 100%;
 }
 
-.todo--done {
+.done {
   background-color: rgba(255,255,255,0.25);
 }
 
-.todo--done .todo__text {
+.done .text {
   text-decoration: line-through;
   opacity: 0.65;
 }
