--- a/src/components/todo.module.css
+++ b/src/components/todo.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: rgba(255,255,255,0.75);
+  background-color: #F6F6F6;
 }
 
 .todo:not(:last-child) {
