--- a/src/pages/app.module.css
+++ b/src/pages/app.module.css
@@ -1,17 +1,7 @@
-#app {
+.router {
   width: 65%;
-  margin: auto;
+  margin: 1rem auto;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: #E5E5E5;
-}
-
-.header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.title {
-  width: 100%;
 }
