--- a/src/components/todo-list.module.css
+++ b/src/components/todo-list.module.css
@@ -1,13 +1,9 @@
 .todoList {
   margin: 0.75rem;
+  border: 1px solid #d4d4d4;
+  border-radius: 0.5rem;
 }
 
-.todo:first-child {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-}
-
-.todo:last-child {
-  border-bottom-left-radius: 0.75rem;
-  border-bottom-right-radius: 0.75rem;
+.todo:not(:last-child) {
+  border-bottom: 1px solid #d4d4d4;
 }
