--- a/src/components/todo.module.css
+++ b/src/components/todo.module.css
@@ -3,11 +3,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #F6F6F6;
-}
-
-.todo:not(:last-child) {
-  border-bottom: 1px solid grey;
 }
 
 .todo > * {
@@ -19,10 +14,10 @@
 }
 
 .done {
-  background-color: rgba(255,255,255,0.25);
+  background-color: rgb(0, 200, 83, 0.2);
 }
 
 .done .text {
   text-decoration: line-through;
-  opacity: 0.65;
+  opacity: 0.8;
 }
