--- a/src/components/todo-list.module.css
+++ b/src/components/todo-list.module.css
@@ -4,6 +4,20 @@
   border-radius: 0.5rem;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1.5rem;
+  border-bottom: 1px solid #d4d4d4;
+  background-color: rgba(212, 212, 212, 0.35);
+}
+
 .todo:not(:last-child) {
   border-bottom: 1px solid #d4d4d4;
+}
+
+.loading {
+  padding: 1rem;
+  text-align: center;
 }
