Add auth page and protect routes from unauthorized access

--- a/src/components/app-bar.module.css
+++ b/src/components/app-bar.module.css
@@ -6,7 +6,13 @@
   border-bottom: 1px solid grey;
 }
 
-.user_greet {
+.user_menu_wrapper {
+  display: flex;
+  flex-direction: row;
+  margin: 0 1.5rem;
+}
+
+.user_greeting {
   margin: 0;
   padding-right: 1.5rem;
 }
