--- a/src/pages/todos.module.css
+++ b/src/pages/todos.module.css
@@ -1,6 +1,23 @@
+.todo_list {
+  margin: 0.75rem;
+  border: 1px solid #d4d4d4;
+  border-radius: 0.5rem;
+}
+
 .header {
-    margin: auto;
-    padding: 0.5rem;
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1.5rem;
+  border-bottom: 1px solid #d4d4d4;
+  background-color: rgba(212, 212, 212, 0.35);
+}
+
+.todo:not(:last-child) {
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.loading {
+  padding: 1rem;
+  text-align: center;
 }
