--- a/src/components/todo.module.css
+++ b/src/components/todo.module.css
@@ -5,16 +5,17 @@
   align-items: center;
 }
 
-.todo > * {
-  margin: 0 0.5rem;
-}
-
 .text {
   width: 100%;
+  padding: 0 0.5rem;
+}
+
+.action {
+  margin: 0 0.25rem;
 }
 
 .done {
-  background-color: rgb(0, 200, 83, 0.2);
+  background-color: rgba(0, 200, 83, 0.2);
 }
 
 .done .text {
