--- a/src/pages/todos.module.css
+++ b/src/pages/todos.module.css
@@ -8,9 +8,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1.5rem;
   border-bottom: 1px solid #d4d4d4;
   background-color: rgba(212, 212, 212, 0.35);
+}
+
+.header_text {
+  padding: 0 1.5rem;
 }
 
 .todo:not(:last-child) {
