--- a/src/components/todo-dialog.module.css
+++ b/src/components/todo-dialog.module.css
@@ -6,16 +6,20 @@
 }
 
 .header {
-  background-color: #E5E5E5;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0.75rem;
+  background-color: rgba(212, 212, 212, 0.35);
 }
 
 .title {
   width: 100%;
-  margin: 0.5rem 0;
+  padding: 0 0.75rem;
+  margin: 0;
+}
+
+.close_button {
+  margin: 0.25rem;
 }
 
 .content {
@@ -30,7 +34,6 @@
 .actions {
   display: flex;
   justify-content: flex-end;
-  padding: 0.75rem;
-  margin-top: 1rem;
-  border-top: 1px solid grey;
+  padding: 0.1rem;
+  border-top: 1px solid #d4d4d4;
 }
