--- a/src/components/todo.module.css
+++ b/src/components/todo.module.css
@@ -7,7 +7,13 @@
 }
 
 .text {
-  width: 100%;
+  flex-grow: 1;
+  padding: 0 0.5rem;
+}
+
+.time {
+  opacity: 0.65;
+  font-size: 0.8rem;
   padding: 0 0.5rem;
 }
 
